src/objects/Connection__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applied_Load__c</fullName>
        <label>Applied Load</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Code_Meter_Status__c</fullName>
        <label>Code Meter Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Reading_Frequency__c</fullName>
        <label>Code Reading Frequency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Direction__c</fullName>
        <description>This picklist indicates whether the Connection is used for Consumption or Injection.</description>
        <label>Connection Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumption</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connection_Member_Type__c</fullName>
        <label>Connection Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MMR consumption</fullName>
                </value>
                <value>
                    <fullName>AMR calculated  values</fullName>
                </value>
                <value>
                    <fullName>AMR daily consumption</fullName>
                </value>
                <value>
                    <fullName>AMR consumption monthly</fullName>
                </value>
                <value>
                    <fullName>AMR periodic consumption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connection_Status__c</fullName>
        <label>Connection Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracted_Capacity__c</fullName>
        <label>Contracted Capacity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_City__c</fullName>
        <label>Delivery City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Country__c</fullName>
        <label>Delivery Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Postal_Code__c</fullName>
        <label>Delivery Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_State__c</fullName>
        <label>Delivery State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Street__c</fullName>
        <label>Delivery Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demand_Factor__c</fullName>
        <label>Demand Factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN__c</fullName>
        <label>EAN</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field Order</label>
        <referenceTo>Field_Order__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GSL4__c</fullName>
        <label>GSL4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Load_Factor__c</fullName>
        <label>Load Factor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRID_Number__c</fullName>
        <label>MRID Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Address_Barangay__c</fullName>
        <label>Barangay</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pinagbuhatan</fullName>
                </value>
                <value>
                    <fullName>Buayang Bato</fullName>
                </value>
                <value>
                    <fullName>Bagong Ilog</fullName>
                </value>
                <value>
                    <fullName>Bagong Katipunan</fullName>
                </value>
                <value>
                    <fullName>Bambang</fullName>
                </value>
                <value>
                    <fullName>Buting</fullName>
                </value>
                <value>
                    <fullName>Caniogan</fullName>
                </value>
                <value>
                    <fullName>Dela Paz</fullName>
                </value>
                <value>
                    <fullName>Kalawaan</fullName>
                </value>
                <value>
                    <fullName>Kapasigan</fullName>
                </value>
                <value>
                    <fullName>Kapitolyo</fullName>
                </value>
                <value>
                    <fullName>Malinao</fullName>
                </value>
                <value>
                    <fullName>Manggahan</fullName>
                </value>
                <value>
                    <fullName>Maybunga</fullName>
                </value>
                <value>
                    <fullName>N Aquino Pilot Com (Napico)</fullName>
                </value>
                <value>
                    <fullName>Oranbo</fullName>
                </value>
                <value>
                    <fullName>Palatiw</fullName>
                </value>
                <value>
                    <fullName>Pasig City (Isolated)</fullName>
                </value>
                <value>
                    <fullName>Pineda</fullName>
                </value>
                <value>
                    <fullName>Rosario</fullName>
                </value>
                <value>
                    <fullName>Sagad</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>San Joaquin</fullName>
                </value>
                <value>
                    <fullName>San Jose</fullName>
                </value>
                <value>
                    <fullName>San Nicolas</fullName>
                </value>
                <value>
                    <fullName>Santolan</fullName>
                </value>
                <value>
                    <fullName>San Miguel</fullName>
                </value>
                <value>
                    <fullName>Sta. Cruz</fullName>
                </value>
                <value>
                    <fullName>Sta. Lucia</fullName>
                </value>
                <value>
                    <fullName>Sta. Rosa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Address_City_Municipal__c</fullName>
        <label>City / Municipality</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cainta</fullName>
                </value>
                <value>
                    <fullName>Makati City</fullName>
                </value>
                <value>
                    <fullName>Mandaluyong</fullName>
                </value>
                <value>
                    <fullName>Manila City</fullName>
                </value>
                <value>
                    <fullName>Pasig City</fullName>
                </value>
                <value>
                    <fullName>Pateros</fullName>
                </value>
                <value>
                    <fullName>Q. C.-Kaunlaran Dist 4</fullName>
                </value>
                <value>
                    <fullName>San Juan</fullName>
                </value>
                <value>
                    <fullName>Taguig City</fullName>
                </value>
                <value>
                    <fullName>Taytay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Address_Country__c</fullName>
        <defaultValue>&quot;Philippines&quot;</defaultValue>
        <label>Meter Address Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Address_Geocode_Accuracy__c</fullName>
        <label>Meter Address Geocode Accuracy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Address_Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter_Address_Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meter_Address_Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metro Manila</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Address_Street_Name__c</fullName>
        <label>Street Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Address_Street_No__c</fullName>
        <label>Street #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Address_Subdivision__c</fullName>
        <label>Subdivision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Address_Unit_No__c</fullName>
        <label>Unit No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Address_Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Meter_Status__c</fullName>
        <label>Meter Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Sealed</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Scrapped</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meter_Tag_Sent__c</fullName>
        <label>Meter Tag Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Metering_Point_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Metering Point ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Metering_Point_Status__c</fullName>
        <label>Metering Point Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Vacant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_reading_date__c</fullName>
        <label>Next Reading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Phase (1Ø), Two (2)-Wire,</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Network,</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye),</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Three (3)-Wire (Delta),</fullName>
                </value>
                <value>
                    <fullName>Single Phase (1Ø), Three (3)-Wire,</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Delta),</fullName>
                </value>
                <value>
                    <fullName>Three Phase (3Ø), Four (4)-Wire (Grounded Wye/Delta)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reading_Frequency__c</fullName>
        <label>Reading Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Two monthly</fullName>
                    <label>Bi-monthly</label>
                </value>
                <value>
                    <fullName>Three monthly</fullName>
                    <label>Quarterly</label>
                </value>
                <value>
                    <fullName>Half-Yearly</fullName>
                    <label>Semi-Annually</label>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                    <label>Annually</label>
                </value>
                <value>
                    <fullName>Tele</fullName>
                </value>
                <value>
                    <fullName>Unmeasured</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Installation_Number__c</fullName>
        <label>SAP Installation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_number__c</fullName>
        <label>Meter Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Supply_Type__c</fullName>
        <label>Service Supply Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal with meter</fullName>
                </value>
                <value>
                    <fullName>Streetlight with meter</fullName>
                </value>
                <value>
                    <fullName>Normal without meter</fullName>
                </value>
                <value>
                    <fullName>Temporary with meter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Connections</relationshipLabel>
        <relationshipName>Connections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utility_type__c</fullName>
        <label>Utility Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electricity</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Voltage__c</fullName>
        <label>Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>69/39 kV</fullName>
                </value>
                <value>
                    <fullName>115/66 kV</fullName>
                </value>
                <value>
                    <fullName>6.24/3.60 kV</fullName>
                </value>
                <value>
                    <fullName>13.2/7.62 kV</fullName>
                </value>
                <value>
                    <fullName>13.8/7.97 kV</fullName>
                </value>
                <value>
                    <fullName>34.5/19.92 kV</fullName>
                </value>
                <value>
                    <fullName>216 V</fullName>
                </value>
                <value>
                    <fullName>230 V</fullName>
                </value>
                <value>
                    <fullName>460/265 V</fullName>
                </value>
                <value>
                    <fullName>400/230 V</fullName>
                </value>
                <value>
                    <fullName>4.8 kV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Connection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Installation_Date__c</columns>
        <columns>Meter_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllGas</fullName>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Installation_Date__c</columns>
        <columns>Meter_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Utility_type__c</field>
            <operation>equals</operation>
            <value>Gas</value>
        </filters>
        <label>All Gas Connections</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Electricity_Connections</fullName>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Installation_Date__c</columns>
        <columns>Meter_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Utility_type__c</field>
            <operation>equals</operation>
            <value>Electricity</value>
        </filters>
        <label>All Electricity Connections</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CONN-{00000000}</displayFormat>
        <label>Connection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Modification_of_meter_requires_SA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT($Profile.Name = &apos;System Administrator&apos;),NOT(ISBLANK(  Serial_number__c )))</errorConditionFormula>
        <errorMessage>Modification of meter requires the creation of a case</errorMessage>
    </validationRules>
</CustomObject>